server/.happypack/s--1128182325
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/App/App.js: Unexpected token, expected , (31:62)

[0m [90m 29 | [39m[36mfunction[39m mapDispatchToProps(dispatch) {
 [90m 30 | [39m    [36mreturn[39m{
[31m[1m>[22m[39m[90m 31 | [39m        pageActions[33m:[39m bindActionCreators(pageActions[33m,[39m dispatch)[33m;[39m
 [90m    | [39m                                                              [31m[1m^[22m[39m
 [90m 32 | [39m    }[33m;[39m
 [90m 33 | [39m}
 [90m 34 | [39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/App/App.js: Unexpected token, expected , (31:62)

[0m [90m 29 | [39m[36mfunction[39m mapDispatchToProps(dispatch) {
 [90m 30 | [39m    [36mreturn[39m{
[31m[1m>[22m[39m[90m 31 | [39m        pageActions[33m:[39m bindActionCreators(pageActions[33m,[39m dispatch)[33m;[39m
 [90m    | [39m                                                              [31m[1m^[22m[39m
 [90m 32 | [39m    }[33m;[39m
 [90m 33 | [39m}
 [90m 34 | [39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)